--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Tool Editor for Sequential Desktop",
   "main": "dist/index.html",
   "type": "module",
-  "keywords": ["sequential", "tool", "editor", "app"],
+  "keywords": [
+    "sequential",
+    "tool",
+    "editor",
+    "app"
+  ],
   "author": "Sequential Ecosystem",
   "license": "MIT",
-  "dependencies": {
-    "@sequential/zellous-client-sdk": "^1.0.0"
-  }
+  "dependencies": {}
 }
